--- a/html-css/layouts/index.html
+++ b/html-css/layouts/index.html
@@ -60,7 +60,7 @@
         div, p, h1 => they start from left until the end of the page => block element
 
         inline-block elements => mostly form element
-            - exactly same as inline elements but height, width, and margin don't work
+            - exactly same as inline elements but height, width, and vertical margin don't work
      -->
     <h1>Layouts</h1>
 
