--- a/html-css/layouts/positions.html
+++ b/html-css/layouts/positions.html
@@ -21,12 +21,25 @@
             /* right: 0px; */
         }
 
-        .box {}
+        .container {
+            height: 600px;
+            width: 600px;
+            position: relative;
+            background-color: red;
+            z-index: 9;
+        }
 
         .box {
             height: 500px;
             width: 500px;
             border: 1px solid;
+            background-color: yellow;
+            /* position: relative; */
+        }
+
+        .box>p {
+            position: absolute;
+            right: 0;
         }
 
         .fixed {
@@ -37,6 +50,7 @@
             left: 10px;
             bottom: 10px;
             color: yellow;
+            z-index: 2;
         }
 
         .sticky {
@@ -47,6 +61,7 @@
             /* right: 10px; */
             top: 10px;
             color: yellow;
+            z-index: 1;
         }
     </style>
 </head>
