--- a/html-css/layouts/positions.html
+++ b/html-css/layouts/positions.html
@@ -53,16 +53,7 @@
             z-index: 2;
         }
 
-        .sticky {
-            height: 200px;
-            width: 200px;
-            background-color: green;
-            position: sticky;
-            /* right: 10px; */
-            top: 10px;
-            color: yellow;
-            z-index: 1;
-        }
+        .sticky {}
     </style>
 </head>
 
